--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --background-color: white;
+}
+
+body {
+    background-color: var(--background-color);
+    //font-family: sans-serif;
+    font-family: Glacial Indifference;
+    //transform: scale(0.9);
+    //transform-origin: top left;
+}
