--- a/src/app/pieces/game-context/game-context.component.html
+++ b/src/app/pieces/game-context/game-context.component.html
@@ -1,6 +1,12 @@
-<div class="piece">
+<div class="piece" (mouseover)="displayMenu='show'" (mouseleave)="displayMenu='hide'">
     <div class="piece-attach piece-attach-right-top"></div>
     <div class="piece-attach piece-attach-right-bottom"></div>
+
+    <div class="piece-menu" [class]="displayMenu">
+        <mat-icon fontIcon="mode_comment" (click)="onClickComments()"></mat-icon>
+        <mat-icon fontIcon="backspace" (click)="onClickErase()"></mat-icon>
+        <mat-icon fontIcon="more_vert" (click)="onClickDots()"></mat-icon>
+    </div>
     
     <div class="piece-form">
         <div class="piece-form-title">Contexte du jeu</div>
