--- a/src/app/pieces/game-educationnal-objective/game-educationnal-objective.component.html
+++ b/src/app/pieces/game-educationnal-objective/game-educationnal-objective.component.html
@@ -1,7 +1,11 @@
-<div class="piece">
+<div class="piece" (mouseover)="displayMenu='show'" (mouseleave)="displayMenu='hide'">
     <div class="piece-attach piece-attach-right-top"></div>
     <div class="piece-attach piece-attach-right-bottom"></div>
 
+    <div class="piece-menu" [class]="displayMenu">
+        <mat-icon fontIcon="mode_comment" (click)="onClickComments()"></mat-icon>
+        <mat-icon fontIcon="backspace" (click)="onClickErase()"></mat-icon>
+    </div>
    
     <div class="piece-form">
         <div class="piece-form-title">Objectif pédagogique</div>
