--- a/src/app/pieces/educational-objective/educational-objective.component.html
+++ b/src/app/pieces/educational-objective/educational-objective.component.html
@@ -1,18 +1,16 @@
-<!--
-<div class="piece">
-    <textarea placeholder="Maitriser Moodle"></textarea>
-</div>
--->
-
-<div class="piece">
+<div class="piece" (mouseover)="displayMenu='show'" (mouseleave)="displayMenu='hide'">
     <div class="piece-attach piece-attach-right"></div>
     <div class="piece-attach piece-attach-left-top"></div>
     <div class="piece-attach piece-attach-left-bottom"></div>
     
+    <div class="piece-menu" [class]="displayMenu">
+        <mat-icon fontIcon="mode_comment" (click)="onClickComments()"></mat-icon>
+        <mat-icon fontIcon="add" (click)="onClickAdd()"></mat-icon>
+        <mat-icon fontIcon="backspace" (click)="onClickErase()"></mat-icon>
+    </div>
    
     <div class="piece-form">
         <div class="piece-form-title">Objectif pédagogique</div>
-        <!--<div class="piece-form-subtitle">Commun pour la mission 1</div>-->
         <div class="piece-form-objective">
             <label for="objective">Commun pour la mission 1</label>
             <textarea name="objective" placeholder="Comprendre la dépendance de chaque rôle pour atteindre ses objectifs"></textarea>
