--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,8 @@
 }
 
 body {
+    margin-top: 60px;
     background-color: var(--background-color);
-    //font-family: sans-serif;
     font-family: Glacial Indifference;
     //transform: scale(0.9);
     //transform-origin: top left;
