--- a/src/app/pieces/task/task.component.scss
+++ b/src/app/pieces/task/task.component.scss
@@ -12,9 +12,8 @@
         width: 150px;
         height: 50px;
         background-color: #f7f7f7;
-        opacity: 0.75;
         z-index: -1;
-        top: -51px;
+        top: -50px;
         left: 50%;
         transform: translateX(-50%);
         transition: transform 0.5s ease;
@@ -37,6 +36,42 @@
     }
     &-menu.hide {
         transform: translateX(-50%) translateY(100%);
+    }
+
+    &-symbolchoice {
+        position: absolute;
+        background-color: #f7f7f7;
+        width: 300px;
+        height: 100px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        border: solid black 1px;
+        padding: 10px;
+        right: 0;
+        top: 5px;
+        z-index: -1;
+        transition: transform 0.5s ease;
+        
+        label {
+            font-size: 14px;
+        }
+        mat-icon {
+            cursor: pointer;
+            transform: scale(1.2);
+        }
+        mat-icon:hover {
+            opacity: 0.75;
+        }
+
+        &-symbols {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            margin-top: 10px;
+        }
+    }
+    &-symbolchoice.show {
+        transform: translateX(100%);
     }
 
     &-attach {
@@ -113,6 +148,17 @@
                 background-color: white;
                 border-radius: 10px;
                 padding: 5px 10px 5px 10px;
+                cursor: pointer;
+                mat-icon {
+                    position: relative;
+                    left: 50%;
+                    height: 50%;
+                    transform: translateX(-50%) translateY(50%) scale(1.3);
+                    overflow: visible;
+                }
+            }
+            &-symbol:hover{
+                opacity: 0.75;
             }
         }
         &-content {
