set font-family to Glacial Indifference

--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -16,7 +16,7 @@
             <input name="intitule" type="text" placeholder="Organisateur de goûters d'anniversaire"/>   
         </div>
         <div class="piece-form-name">
-            <label for="name">Nom de le quête</label>
+            <label for="name">Nom de la quête</label>
             <input name="name" type="text" placeholder="Fête d'anniversaire"/>   
         </div>
         <div class="piece-form-objective">
