--- a/src/app/pieces/educational-objective/educational-objective.component.scss
+++ b/src/app/pieces/educational-objective/educational-objective.component.scss
@@ -84,7 +84,8 @@
         &-title {
             margin-top: 20px;
             font-size: 25px;
-            font-weight: bold;
+            //font-weight: bold;
+            font-family: 'Glacial Indifference Bold';
         }
         &-objective{
             height: 100%;
