--- a/src/app/pieces/mission-context/mission-context.component.scss
+++ b/src/app/pieces/mission-context/mission-context.component.scss
@@ -103,7 +103,8 @@
         &-title {
             margin-top: 20px;
             font-size: 25px;
-            font-weight: bold;
+            //font-weight: bold;
+            font-family: 'Glacial Indifference Bold';
         }
         &-duration {
             display: flex;
