--- a/src/app/pieces/task/task.component.scss
+++ b/src/app/pieces/task/task.component.scss
@@ -140,7 +140,8 @@
             }
             &-title {
                 font-size: 25px;
-                font-weight: bold;
+                //font-weight: bold;
+                font-family: 'Glacial Indifference Bold';
             }
             &-symbol {
                 width: 50px;
