--- a/src/app/pieces/task/task.component.scss
+++ b/src/app/pieces/task/task.component.scss
@@ -46,6 +46,7 @@
         border-top-right-radius: 10px;
         border-bottom-right-radius: 10px;
         border: solid black 1px;
+        border-left: none;
         padding: 10px;
         right: 0;
         top: 5px;
@@ -72,6 +73,100 @@
     }
     &-symbolchoice.show {
         transform: translateX(100%);
+    }
+
+    &-prerequires {
+        position: absolute;
+        width: 350px;
+        height: 150px;
+        background-color: #f7f7f7;
+        z-index: -1;
+        bottom: 0;
+        left: 25px;
+        border: solid black 1px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        transition: transform 0.5s ease;
+        border-top: none;
+        display: flex;
+        flex-direction: row;
+
+        &-title {
+            margin-left: auto;
+            margin-right: auto;
+            font-family: 'Glacial Indifference Bold';
+            font-size: 14px;
+        }
+        
+        &-form {
+            display: flex;
+            flex-direction: column;
+            overflow: scroll;
+        }
+
+        &-prerequires {
+            position: relative;
+            border-right: solid #a3a3a3 1px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 50%;
+            height: 90%;
+            border-bottom-left-radius: 10px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        &-ressources {
+            width: 50%;
+            height: 90%;
+            border-bottom-right-radius: 10px;
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 50%;
+            height: 90%;
+            border-bottom-left-radius: 10px;
+            display: flex;
+            flex-direction: column;
+
+            &-element {
+                display: flex;
+                flex-direction: row;
+                width: 100%;
+                margin-top: 5px;
+                &-checkbox {
+                    position: relative;
+                    width: 50%;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                }
+
+                &-quantity {
+                    position: relative;
+                    width: 50%;
+                    display: flex;
+                    padding-right: 5px;
+                    justify-content: flex-end;
+                    input {
+                        width: 20px;
+                        border: none;
+                        border-radius: 10px;
+                        text-align: center;
+                    }
+                    select {
+                        width: 40px;
+                        background-color: white;
+                        border: none;
+                        border-radius: 10px;
+                        margin-right: 5px;
+                    }
+                }
+            }
+        }
+    }
+    &-prerequires.show {
+        transform: translateY(100%);
     }
 
     &-attach {
@@ -186,6 +281,23 @@
                     border-bottom-left-radius: 0px;
                     z-index: 1;
                 }
+            }
+            &-prerequires {
+                width: 100px;
+                height: 50px;
+                background-color: white;
+                border-radius: 10px;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                label {
+                    cursor: pointer;
+                }
+
+            }
+            &-prerequires:hover {
+                opacity: 0.75;
             }
         }
     }
