--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,7 @@
 }
 
 body {
-    margin-top: 60px;
+    //margin-top: 60px;
     background-color: var(--background-color);
     font-family: 'Glacial Indifference', sans-serif;
     //transform: scale(0.9);
