increase inputs font size

--- a/src/app/pieces/educational-objective/educational-objective.component.scss
+++ b/src/app/pieces/educational-objective/educational-objective.component.scss
@@ -108,6 +108,7 @@
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: 30%;
+                font-size: 15px;
             }
         }
     }
