--- a/src/app/pieces/task/task.component.scss
+++ b/src/app/pieces/task/task.component.scss
@@ -209,6 +209,7 @@
             border-radius: 10px;
             border: none;
             padding: 5px 10px 5px 10px;
+            font-size: 15px;
         }
         textarea {
             border-radius: 20px;
@@ -216,6 +217,7 @@
             border: none;
             resize: none;
             flex-grow: 1;
+            font-size: 15px;
         }
         select {
             background-color: white;
