--- a/src/app/pieces/game-context/game-context.component.scss
+++ b/src/app/pieces/game-context/game-context.component.scss
@@ -86,6 +86,7 @@
             border-radius: 10px;
             border: none;
             padding: 5px 10px 5px 10px;
+            font-size: 15px;
         }
         textarea {
             border-radius: 20px;
@@ -93,6 +94,7 @@
             border: none;
             resize: none;
             flex-grow: 1;
+            font-size: 15px;
         }
         &-title {
             margin-top: 20px;
