--- a/src/app/pieces/game-educationnal-objective/game-educationnal-objective.component.scss
+++ b/src/app/pieces/game-educationnal-objective/game-educationnal-objective.component.scss
@@ -98,6 +98,7 @@
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: 30%;
+                font-size: 15px;
             }
         }
         &-footer {
