--- a/src/app/pieces/role/role.component.scss
+++ b/src/app/pieces/role/role.component.scss
@@ -95,6 +95,7 @@
             border-radius: 10px;
             border: none;
             padding: 5px 10px 5px 10px;
+            font-size: 15px;
         }
         textarea {
             border-radius: 20px;
@@ -102,6 +103,7 @@
             border: none;
             resize: none;
             flex-grow: 1;
+            font-size: 15px;
         }
         &-title {
             margin-top: 20px;
