--- a/src/app/pieces/mission-context/mission-context.component.html
+++ b/src/app/pieces/mission-context/mission-context.component.html
@@ -17,11 +17,11 @@
         </div>
         <div class="piece-form-intrigue">
             <label for="intrigue">Intrigue</label>
-            <textarea name="intrigue" placeholder="Faites prospérer les commerces essentiels du centre ville pour redresser l’économie du village et attirer de nouveaux habitants"></textarea>  
+            <textarea name="intrigue" placeholder="Concevez un site web ergonomique pour votre premier client"></textarea>  
         </div>
         <div class="piece-form-other">
             <label for="other">Autre</label>
-            <textarea name="other" placeholder="Test"></textarea>  
+            <textarea name="other"></textarea>  
         </div> 
     </div>
 </div>
