--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -13,19 +13,19 @@
         <div class="piece-form-title">Rôle 1</div>
         <div class="piece-form-intitule">
             <label for="intitule">Intitulé</label>
-            <input name="intitule" type="text" placeholder="Organisateur de goûters d'anniversaire"/>   
+            <input name="intitule" type="text" placeholder="Développeur/euse web"/>   
         </div>
         <div class="piece-form-name">
             <label for="name">Nom de la quête</label>
-            <input name="name" type="text" placeholder="Fête d'anniversaire"/>   
+            <input name="name" type="text" placeholder="Intégration de site web"/>   
         </div>
         <div class="piece-form-objective">
             <label for="objective">Objectif(s) pédagoqique(s)</label>
-            <textarea name="objective" placeholder="- Savoir préparer une fête"></textarea>  
+            <textarea name="objective" placeholder="- Connaître la structure d'un document HTML&#10;- Savoir intégrer et mettre en forme des images à une page web"></textarea>  
         </div>
         <div class="piece-form-reward">
             <label for="reward">Récompenses</label>
-            <textarea name="reward" placeholder="- Gagner en compétence en événementiel"></textarea>  
+            <textarea name="reward" placeholder="- Gain en compétences en web&#10;- Termine l'objectif pédagoqique &quot;connaître la structure d'un document HTML&quot;&#10;- Débloque la quête &quot;un CMS (wordpress) pour l'association du village&quot;"></textarea>  
         </div> 
     </div>
 </div>
