--- a/src/app/pieces/task/task.component.html
+++ b/src/app/pieces/task/task.component.html
@@ -100,7 +100,7 @@
                 <mat-icon *ngIf="symbol" [style.color]="symbolColor" [fontIcon]="symbol"></mat-icon>
             </div>    
         </div>
-        <textarea class="piece-form-content" placeholder="Acheter des citrons"></textarea>
+        <textarea class="piece-form-content" placeholder="Positionner dans l'ordre les balises HTML principales"></textarea>
         <div class="piece-form-bottom">
             <div class="piece-form-bottom-prerequires" (click)="changeDisplayPrerequires()">
                 <label>Prérequis</label>
