--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,8 @@
         scrollbar-width: none;
 
         &-scenario {
+            position: relative;
+            transform-origin: top left;
             padding: 60px 5px 10px 5px;
             margin-right: 7px;
         }
