--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,16 +37,16 @@
     </div> 
 
     <div class="container-sider">
-        <div class="container-sider-element" style="width: 400px; height: 400px; background-color: green;">
+        <div class="container-sider-element">
 
         </div>
-        <div class="container-sider-element" style="width: 400px; height: 400px; background-color: green;">
+        <div class="container-sider-element">
 
         </div>
-        <div class="container-sider-element" style="width: 400px; height: 400px; background-color: green;">
+        <div class="container-sider-element">
 
         </div>
-        <div class="container-sider-element" style="width: 400px; height: 400px; background-color: green;">
+        <div class="container-sider-element">
     </div>
 
 
