add sider-pieces (repeat done)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,16 +37,8 @@
     </div> 
 
     <div class="container-sider">
-        <div class="container-sider-element">
-
-        </div>
-        <div class="container-sider-element">
-
-        </div>
-        <div class="container-sider-element">
-
-        </div>
-        <div class="container-sider-element">
+        <app-comments class="container-sider-element"></app-comments>
+        <app-repeat class="container-sider-element"></app-repeat>
     </div>
 
 
