--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,13 +40,11 @@
         box-shadow: -20px 0px 25px rgba(0, 0, 0, 0.3);
 
         &-element {
-            margin-left: auto;
-            margin-right: auto;
             margin-top: 10px;
             margin-bottom: 10px;
-            width: 300px;
-            height: 400px;
-            background-color: green;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
     }
 }
