add personnalization and ressources to role piece

--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -26,6 +26,34 @@
         <div class="piece-form-reward">
             <label for="reward">Récompenses</label>
             <textarea name="reward" placeholder="- Gain en compétences en web&#10;- Termine l'objectif pédagoqique &quot;connaître la structure d'un document HTML&quot;&#10;- Débloque la quête &quot;un CMS (wordpress) pour l'association du village&quot;"></textarea>  
-        </div> 
+        </div>
+
+
+        <div class="piece-form-personnalization">
+            <div class="piece-form-title">Personnalisation</div>
+            <div class="piece-form-personnalization-appearance">
+                <label>Apparence, équipement</label>
+                <textarea></textarea>
+            </div>
+            <div class="piece-form-personnalization-skills">
+                <label>Compétences</label>
+                <textarea></textarea>
+            </div>
+        </div>
+
+        <div class="piece-form-ressources">
+            <div class="piece-form-title">Ressources & attributs</div>
+            <div class="piece-form-ressources-ressource">
+                <div class="piece-form-ressources-ressource-name">
+                    <label for="name">Nom</label>
+                    <input name="name" type="text"/>
+                </div>
+                <div class="piece-form-ressources-ressource-quantity">
+                    <label for="quantity">Nombre</label>
+                    <input name="quantity" type="text">
+                </div>    
+            </div>
+            <button><mat-icon fontIcon="add"></mat-icon></button>
+        </div>
     </div>
 </div>
