add comments sider-piece / resize repeat sider-piece textarea / add mat-button / replace symbolchoix and prerequires buttons by mat-buttons

--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -53,7 +53,7 @@
                     <input name="quantity" type="text">
                 </div>    
             </div>
-            <button><mat-icon fontIcon="add"></mat-icon></button>
+            <button mat-button><mat-icon fontIcon="add"></mat-icon></button>
         </div>
     </div>
 </div>
