--- a/src/app/sider-pieces/comments/comments.component.html
+++ b/src/app/sider-pieces/comments/comments.component.html
@@ -1,3 +1,18 @@
 <div class="piece">
+    <div class="piece-form">
+        <div class="piece-form-title">Commentaires</div>
 
+        <div class="piece-form-comments">
+            <app-comment></app-comment>
+        </div>
+
+        <div class="piece-form-newcomment">
+            <div class="piece-form-newcomment-form">
+                <label>Nouveau commentaire</label>
+                <textarea></textarea>
+            </div>
+            <button mat-button>Ajouter un commentaire</button>
+        </div>
+
+    </div>
 </div>
