--- a/src/app/pieces/task/task.component.scss
+++ b/src/app/pieces/task/task.component.scss
@@ -243,26 +243,18 @@
             }
             &-title {
                 font-size: 25px;
-                //font-weight: bold;
                 font-family: 'Glacial Indifference Bold';
             }
             &-symbol {
                 width: 50px;
-                height: 40px;
+                height: 50px;
                 background-color: white;
                 border-radius: 10px;
-                padding: 5px 10px 5px 10px;
                 cursor: pointer;
                 mat-icon {
-                    position: relative;
-                    left: 50%;
-                    height: 50%;
-                    transform: translateX(-50%) translateY(50%) scale(1.3);
+                    transform: scale(1.3);
                     overflow: visible;
                 }
-            }
-            &-symbol:hover{
-                opacity: 0.75;
             }
         }
         &-content {
@@ -299,13 +291,6 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                label {
-                    cursor: pointer;
-                }
-
-            }
-            &-prerequires:hover {
-                opacity: 0.75;
             }
         }
     }
