--- a/src/app/pieces/task/task.component.scss
+++ b/src/app/pieces/task/task.component.scss
@@ -224,6 +224,10 @@
             resize: none;
             flex-grow: 1;
             font-size: 15px;
+            background-image: url("../../../assets/background-images/tache.png");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: 30%;
         }
         select {
             background-color: white;
