--- a/src/app/pieces/educational-objective/educational-objective.component.scss
+++ b/src/app/pieces/educational-objective/educational-objective.component.scss
@@ -84,7 +84,6 @@
         &-title {
             margin-top: 20px;
             font-size: 25px;
-            //font-weight: bold;
             font-family: 'Glacial Indifference Bold';
         }
         &-objective{
@@ -104,7 +103,7 @@
                 resize: none;
                 flex-grow: 1;
                 margin-bottom: 25px;
-                background-image: url("../../../assets/target.png");
+                background-image: url("../../../assets/background-images/obj2.png");
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: 30%;
