--- a/src/app/pieces/game-context/game-context.component.scss
+++ b/src/app/pieces/game-context/game-context.component.scss
@@ -120,12 +120,24 @@
             margin-top: 10px;
             display: flex;
             flex-direction: column;
+            textarea {
+                background-image: url("../../../assets/background-images/graal.png");
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: 30%;
+            }
         }
         &-other {
             display: flex;
             flex-direction: column;
             margin-bottom: 25px;
             height: 40%;
+            textarea {
+                background-image: url("../../../assets/background-images/autre.png");
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: 30%;
+            }
         }
     }
 
