--- a/src/app/pieces/game-educationnal-objective/game-educationnal-objective.component.scss
+++ b/src/app/pieces/game-educationnal-objective/game-educationnal-objective.component.scss
@@ -94,7 +94,7 @@
                 resize: none;
                 flex-grow: 1;
                 margin-bottom: 5px;
-                background-image: url("../../../assets/chest.png");
+                background-image: url("../../../assets/background-images/objGnrl.png");
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: 30%;
