--- a/src/app/pieces/mission-context/mission-context.component.scss
+++ b/src/app/pieces/mission-context/mission-context.component.scss
@@ -118,12 +118,24 @@
             margin-top: 10px;
             display: flex;
             flex-direction: column;
+            textarea {
+                background-image: url("../../../assets/background-images/contexte.png");
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: 30%;
+            }
         }
         &-other {
             display: flex;
             flex-direction: column;
             margin-bottom: 25px;
             height: 30%;
+            textarea {
+                background-image: url("../../../assets/background-images/map.png");
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: 30%;
+            }
         }
     }
 }
